# j2i

./: CHANGELOG.md  Containerfile  Dockerfile  README.md  config.example.toml  pyproject.toml
contrib/quadlet/: j2i.container
src/j2i/: __main__.py  bridge.py  config.py  pastebin.py
src/j2i/irc/: client.py
src/j2i/xmpp/: avatar.py  client.py  component.py
tests/: test_avatar.py  test_bridge.py  test_irc_client.py  test_pastebin.py  test_reaction.py  test_redact.py  test_reply.py
