[project]
name = "j2i"
version = "1.0.0"
description = "Open source bridge software that connects XMPP and IRC channels"
readme = "README.md"
authors = [
    { name = "Telepath", email = "development@telepath.im" }
]
requires-python = ">=3.11"
dependencies = [
    "slixmpp>=1.8.0",
]

[project.scripts]
j2i = "j2i.__main__:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "foundry"
url = "https://foundry.fsky.io/api/packages/telepath/pypi/simple/"
publish-url = "https://foundry.fsky.io/api/packages/telepath/pypi/"
explicit = true
